src/snapshots/openapi_generator__test_helpers__simple_snapshot_test.snap
---
source: openapi-generator/src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct SimpleType {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub name: Option<String>,
}
