src/snapshots/openapi_generator__test_helpers__underscore_props_structured.snap
---
source: openapi-generator/src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct ConfigSchema {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub allowed_tools: Option<ConfigSchemaAllowedTools>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub cache_control: Option<ConfigSchemaCacheControl>,
}
pub type ConfigSchemaCacheControl = String;
pub type ConfigSchemaAllowedTools = Vec<String>;
